--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,5 +68,6 @@ add_executable(task_priority ${FREERTOS_SOURCE} ./user/task_priority.c)
 add_executable(tick_count ${FREERTOS_SOURCE} ./user/tick_count.c)
 add_executable(event_group ${FREERTOS_SOURCE} ./user/event_group.c)
 add_executable(timer ${FREERTOS_SOURCE} ./user/soft_timer.c)
-add_executable(queue ${FREERTOS_SOURCE} ./user/queue.c)
+add_executable(queue1 ${FREERTOS_SOURCE} ./user/queue1.c)
+add_executable(queue2 ${FREERTOS_SOURCE} ./user/queue2.c)
 add_executable(user_list ./Source/list.c ./user/user_list.c)
